# plotaudiothings

./: .gitmodules  CMakeLists.txt  README.md  clh_butterworth.txt  clh_output.txt  oh_butterworth.txt  oh_output.txt  options.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: digital.hpp
source/: Resonator.hpp  lib.cpp  main.cpp  values_ch.hpp  values_ch_full.hpp  values_oh.hpp  values_oh_full.hpp  values_reso.hpp
